change the colors

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@ code {
   direction: ltr;
 }
 
+.containedBtn,.containedBtn:hover{
+  background-color:'deepPink';
+}
+
 /*
 *:hover,:active,:focus{
   color: rgb(224, 0, 75);
