--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .css-a3l6o-MuiInputBase-root-MuiInput-root-MuiSelect-root:after,
 .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input
 {    
-    border-color: #1c8ab2 !important
+    border-color: #02c298 !important
 }
 
 .css-1a1fmpi-MuiInputBase-root-MuiInput-root.Mui-error:after {
@@ -12,38 +12,38 @@
 }
 
 .css-1c2i806-MuiFormLabel-root-MuiInputLabel-root.Mui-focused, .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root.Mui-focused{
-    color: #1c8ab2 !important
+    color: #02c298 !important
 }
 /*buttonOutlined*/
 .css-1rvhyz2-MuiButtonBase-root-MuiButton-root{
-    border-color: #1c8ab2 !important
+    border-color: #02c298 !important
 }
 
  .MuiInputBase-colorPrimary, .css-md26zr-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused{
-    border-color: #1c8ab2 !important;
-    outline-color: #1c8ab2 !important
+    border-color: #02c298 !important;
+    outline-color: #02c298 !important
 }
 
 
 .MuiInputBase-colorPrimary.Mui-focused, .MuiInputBase-formControl.Mui-focused, .MuiInputBase-fullWidth.Mui-focused, .MuiInputBase-root.Mui-focused, .MuiOutlinedInput-root.Mui-focused{
-    border-color: #1c8ab2 !important;
-    outline-color: #1c8ab2 !important
+    border-color: #02c298 !important;
+    outline-color: #02c298 !important
 }
 
 
 .css-1rvhyz2-MuiButtonBase-root-MuiButton-root:hover, .css-1pq3op5-MuiButtonBase-root-MuiButton-root:hover{
-    background-color: #ff149312 !important
+    background-color: #018669 !important
 }
 /*buttonBase*/
 .css-z4kzhn-MuiButtonBase-root-MuiButton-root,.css-sghohy-MuiButtonBase-root-MuiButton-root{
-    background-color: #1c8ab2 !important
+    background-color: #02c298 !important
 }
 
 .css-z4kzhn-MuiButtonBase-root-MuiButton-root:hover,
 .css-sghohy-MuiButtonBase-root-MuiButton-root:hover,
 .css-8jqb21-MuiButtonBase-root-MuiButton-root:hover,
 .css-s2jw0r-MuiButtonBase-root-MuiButton-root:hover,{
-    background-color: #187292 !important
+    background-color: #009f7c !important
 }
 .css-z4kzhn-MuiButtonBase-root-MuiButton-root.Mui-disabled,.css-17huflz-MuiButtonBase-root-MuiButton-root.Mui-disabled,
 .css-sghohy-MuiButtonBase-root-MuiButton-root.Mui-disabled {
@@ -51,23 +51,32 @@
 }
 /*formLabel*/
 .css-k06cc8-MuiFormLabel-root, .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root.Mui-focused,.css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.Mui-checked, .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.MuiCheckbox-indeterminate {
-    color: #1c8ab2 !important
+    color: #02c298 !important
 }
 /*select*/
 /* .css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root.Mui-selected:hover, .css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root.Mui-selected {
-    background-color: #1872925d !important
+    background-color: #009f7c5d !important
 } */
 .css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root.Mui-selected:hover,
  .css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root.Mui-selected,
 .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root:hover, 
-.css-vqmohf-MuiButtonBase-root-MuiRadio-root:hover {
-    background-color: #1872925d !important
+.css-vqmohf-MuiButtonBase-root-MuiRadio-root:hover,
+.css-1ptkj7f-MuiButtonBase-root-MuiButton-root:hover{
+    background-color: #009f7c5d !important
 }
 /*radioButton*/
 .css-vqmohf-MuiButtonBase-root-MuiRadio-root.Mui-checked, .css-u4tvz2-MuiFormLabel-root.Mui-focused, .css-1xdg3r6-MuiFormLabel-root, .css-8pqxon-MuiFormLabel-root, .css-1pq3op5-MuiButtonBase-root-MuiButton-root {
-    color: #1c8ab2 !important;
+    color: #02c298 !important;
 }
 
 .containedBtn,.containedBtn:hover, .css-17huflz-MuiButtonBase-root-MuiButton-root{
-    background-color:#1a7799 !important;
+    background-color:#009f7c5d !important;
+  }
+
+  .css-1xw1d9r-MuiButtonBase-root-MuiButton-root, .css-tbcuck-MuiPaper-root-MuiAppBar-root{
+    color: #02c298 !important;
+
+  }
+  .css-1xw1d9r-MuiButtonBase-root-MuiButton-root:hover{
+      background-color: #02c29810 !important;
   }
